# turingopt

./: .gitignore  README.md  build_nvml_pkg_config.sh  build_slurm_pkg_config.sh  buildpkgconfigs.sh  buildslurmpc.sh  go.work  go.work.sum  meson.build  reflect.lst  reflect.sh
intercepter/: meson.build
intercepter/include/: auditlib.h  debugreg.h  dlmap.h  interceptlib.h  mm.h  mrecycle.h  mrecycle_interface.h  preloadlib.h
intercepter/src/: auditlib.cpp  debugreg.c  dlmap.cpp  interceptlib.cpp  mm.cpp  mrecycle.c  preloadlib.cpp
watcher/: meson.build
watcher/include/: analyze_info.h  analyzer.h  common.h  db_common.h  main.h  messaging.h  sqlite_helper.h  worker.h  worker_interface.h
watcher/include/def/: slurm_stepid.inc
watcher/include/gpu/: interface.h  provider_bright.h  provider_nvml.h
watcher/scripts/: turingwatch_sched_worker.sh
watcher/scripts/scheduled_worker/: gen_html.sh  sendmail.sh
watcher/scripts/slurm_scraping_job/: run.sh  submit.sh
watcher/scripts/user_submission/: submit.sh  watch.sh
watcher/sql/: analyze.cpp  ddl.cpp  ddl.sql  migrate.cpp  migrate.h  modify.cpp  modify.sql  sql.h  sql_helper.h
watcher/src/: analyze_info.c  analyze_mail_config.c.in  analyzer.cpp  db_common.cpp  main.cpp  messaging.cpp  worker.cpp
watcher/src/gpu/: bright.cpp  interface.cpp  none.cpp  nvml.cpp
watcher/systemd/: gen_env.sh  turingwatch.distributor.service  turingwatch.scheduled_worker.service  turingwatch.scheduled_worker.timer  turingwatch.server.service  turingwatch.webserver.service
watcher/webserver/: go.mod  go.sum  main.go  meson.build  server.go
watcher/webserver/static/: data.html  data.js  index.html  report.js  requests.js  sidebar.css  style.css  tips.js  tips.json
watcher/webserver/static/data_configs/: default.json  listing.json
